# DicomBrowser

./: .gitignore  .gitmodules  Dockerfile  MANIFEST.in  README.md  dicombrowser.spec  pyproject.toml  requirements.txt  setup.py
DicomBrowser/: DicomBrowser.py  DicomBrowserWin.py  DicomBrowserWin.ui  Resources.qrc  Resources_rc.py  Resources_rc4.py  Resources_rc5.py  __init__.py  __main__.py  dicom.py  dicombrowser.py  models.py
DicomBrowser.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
dicombrowser/: __init__.py  __main__.py  _version.py  dicom.py  dicombrowser.py  models.py  resources_rc.py
dicombrowser/res/: DefaultUIStyle.css  DicomBrowserWin.ui  Resources.qrc  icon.icns
res/: DefaultUIStyle.css  DicomBrowserWin.ui  Resources.qrc
